Dummy_Package_for_scratch_org/main/default/objects/Personal_Settings__c/fields/AccessStatusColumn__c.field-meta.xml
<CustomField>
    <fullName>AccessStatusColumn__c</fullName>
    <inlineHelpText>Options are either &quot;dropdown&quot; or &quot;images&quot;</inlineHelpText>
    <label>AccessStatusColumn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>