Dummy_Package_for_scratch_org/main/default/objects/Personal_Settings__c/fields/DeployConnectionBox_height__c.field-meta.xml
<CustomField>
    <fullName>DeployConnectionBox_height__c</fullName>
    <defaultValue>80</defaultValue>
    <label>DeployConnectionBox height</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>