Dummy_Package_for_scratch_org/main/default/objects/Personal_Settings__c/fields/DeployConnectionBox_width__c.field-meta.xml
<CustomField>
    <fullName>DeployConnectionBox_width__c</fullName>
    <defaultValue>70</defaultValue>
    <label>DeployConnectionBox width</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>