Dummy_Package_for_scratch_org/main/default/objects/Personal_Settings__c/fields/Disable_Auto_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Disable_Auto_Resolve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables Auto-Resolve from Online Conflict Resolution</description>
    <inlineHelpText>Disables Auto-Resolve from Online Conflict Resolution</inlineHelpText>
    <label>Disable Auto-Resolve</label>
    <type>Checkbox</type>
</CustomField>