Dummy_Package_for_scratch_org/main/default/objects/Personal_Settings__c/fields/Disable_Re_Create_Feature_Branch_in_US__c.field-meta.xml
<CustomField>
    <fullName>Disable_Re_Create_Feature_Branch_in_US__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Re-Create Feature Branch in US</label>
    <type>Checkbox</type>
</CustomField>